# rUNSWift-2016-release

./: .gitignore  CMakeLists.txt  LICENSE  README.markdown  toolchain-2.1.cmake
docs/2014-ChampionshipPaper/: SPL2014ChampionTeamPaper.bbl  SPL2014ChampionTeamPaper.tex
docs/2015-ChampionshipPaper/: SPL2015ChampionTeam.bib  SPL2015ChampionTeamPaper.tex
docs/2015-ChampionshipPaper/Figures/: figWhistleDataFlow.dot
robot/: CMakeLists.txt  main.cpp  runswift.cmake
robot/blackboard/: Blackboard.cpp  Blackboard.hpp  Blackboard.tcc
robot/gamecontroller/: GameController.cpp  RoboCupGameControlData.hpp
robot/libagent/: AgentData.hpp  libagent.cpp  libagent.hpp
robot/motion/: MotionAdapter.cpp
robot/motion/generator/: BodyModel.cpp  BodyModel.hpp  DistributedGenerator.cpp  DistributedGenerator.hpp  FallAvoidanceGenerator.cpp  FallAvoidanceGenerator.hpp  GetupGenerator.cpp  GetupGenerator.hpp  Walk2014Generator.cpp  Walk2014Generator.hpp
robot/motion/touch/: AgentTouch.cpp
robot/perception/: PerceptionThread.cpp
robot/thread/: ThreadManager.tcc
robot/transmitter/: OffNao.cpp  Team.cpp  Team.hpp
robot/types/: AbsCoord.hpp  ActionCommand.hpp  BBox.hpp  BallInfo.hpp  CameraSettings.hpp  Cluster.hpp  RRCoord.hpp  SPLStandardMessage.hpp  SharedBallInfo.hpp
robot/utils/: Connection.tcc  SPLDefs.hpp  options.cpp
utils/: CMakeLists.txt  bootstrap-robotdir.cmake
utils/cameraCalibrator/: README
utils/kernels/: bot_kernel  top_kernel
utils/offnao/: CMakeLists.txt  visualiser.cpp  visualiser.hpp
utils/wifitools/: runswiftwireless_template
(+104 files in other folders)
